; ModuleID = '/home/carl/AnghaBench/openssl/apps/lib/extr_app_rand.c_opt_rand.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/lib/extr_app_rand.c_opt_rand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@save_rand_file = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @opt_rand(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %14 [
    i32 129, label %5
    i32 128, label %5
    i32 131, label %6
    i32 130, label %9
  ]

5:                                                ; preds = %1, %1
  br label %14

6:                                                ; preds = %1
  %7 = call i32 (...) @opt_arg()
  %8 = call i32 @loadfiles(i32 %7)
  store i32 %8, i32* %2, align 4
  br label %15

9:                                                ; preds = %1
  %10 = load i32, i32* @save_rand_file, align 4
  %11 = call i32 @OPENSSL_free(i32 %10)
  %12 = call i32 (...) @opt_arg()
  %13 = call i32 @OPENSSL_strdup(i32 %12)
  store i32 %13, i32* @save_rand_file, align 4
  br label %14

14:                                               ; preds = %1, %9, %5
  store i32 1, i32* %2, align 4
  br label %15

15:                                               ; preds = %14, %6
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @loadfiles(i32) #1

declare dso_local i32 @opt_arg(...) #1

declare dso_local i32 @OPENSSL_free(i32) #1

declare dso_local i32 @OPENSSL_strdup(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
